Jenkins: Add initial build for JDK 13, add build for JDK 12 on Windows
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1851798 13f79535-47bb-0310-9956-ffa450edef68